// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api allows duplicates routes with different methods 1`] = `
{
  ".wing/onrequesthandler0_c82d41b2.js": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? (new (require("[REDACTED]/wingsdk/src/target-sim/api.onrequest.inflight.js")).ApiOnRequestHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { body: req.body, headers: req.headers }; }
};
})())({

}), args: {} }));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler0",
      },
      {
        "name": "post()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler0",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c85bd2f9eb401f27bec4d0ad16222c2876bcfe640a",
        "attrs": {},
        "path": "root/my_api/Endpoint",
        "props": {
          "inputUrl": "\${wsim#root/my_api#attrs.url}",
          "label": "Api root/my_api",
          "url": "\${wsim#root/my_api#attrs.url}",
        },
        "type": "@winglang/sdk.cloud.Endpoint",
      },
      {
        "addr": "c8b0396e20397567e34feafb703cea1bc0b968dc05",
        "attrs": {},
        "path": "root/my_api/OnRequestHandler0/Policy",
        "props": {
          "principal": "\${wsim#root/my_api/OnRequestHandler0#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
      {
        "addr": "c82d41b2501ac42e07e4565202a5b87a180a01c6a2",
        "attrs": {},
        "path": "root/my_api/OnRequestHandler0",
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler0_c82d41b2.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "addr": "c8f2ecf2132465e146aa80cb01f4e5ab1968f4314a",
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "@winglang/sdk.cloud.Api",
      },
      {
        "addr": "c8a199e7bc539eb442a47653fe0f2b1f0bf50aa6d1",
        "attrs": {},
        "deps": [
          "root/my_api/OnRequestHandler0",
          "root/my_api",
        ],
        "path": "root/my_api/ApiEventMapping0",
        "props": {
          "publisher": "\${wsim#root/my_api#attrs.handle}",
          "subscriber": "\${wsim#root/my_api/OnRequestHandler0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "pathPattern": "/hello",
              },
              {
                "method": "POST",
                "pathPattern": "/hello",
              },
            ],
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_api": {
          "children": {
            "ApiEventMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping0",
              "path": "root/my_api/ApiEventMapping0",
            },
            "Endpoint": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "Api root/my_api",
                "title": "Endpoint",
              },
              "id": "Endpoint",
              "path": "root/my_api/Endpoint",
            },
            "OnRequestHandler0": {
              "children": {
                "Policy": {
                  "constructInfo": {
                    "fqn": "constructs.Construct",
                    "version": "10.3.0",
                  },
                  "display": {
                    "description": "A simulated resource policy",
                    "hidden": true,
                    "title": "Policy",
                  },
                  "id": "Policy",
                  "path": "root/my_api/OnRequestHandler0/Policy",
                },
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "hidden": true,
                "sourceModule": "@winglang/sdk",
                "title": "GET /hello",
              },
              "id": "OnRequestHandler0",
              "path": "root/my_api/OnRequestHandler0",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple GET routes and one lambda 1`] = `
{
  ".wing/onrequesthandler0_c82d41b2.js": ""use strict";
var $handler = undefined;
exports.handler = async function(event) {
  $handler = $handler ?? (new (require("[REDACTED]/wingsdk/src/target-sim/api.onrequest.inflight.js")).ApiOnRequestHandlerClient({ handler: new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { body: req.body, headers: req.headers }; }
};
})())({

}), args: {} }));
  return await $handler.handle(event);
};",
  "connections.json": {
    "connections": [
      {
        "name": "get()",
        "source": "root/my_api",
        "target": "root/my_api/OnRequestHandler0",
      },
    ],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c85bd2f9eb401f27bec4d0ad16222c2876bcfe640a",
        "attrs": {},
        "path": "root/my_api/Endpoint",
        "props": {
          "inputUrl": "\${wsim#root/my_api#attrs.url}",
          "label": "Api root/my_api",
          "url": "\${wsim#root/my_api#attrs.url}",
        },
        "type": "@winglang/sdk.cloud.Endpoint",
      },
      {
        "addr": "c8b0396e20397567e34feafb703cea1bc0b968dc05",
        "attrs": {},
        "path": "root/my_api/OnRequestHandler0/Policy",
        "props": {
          "principal": "\${wsim#root/my_api/OnRequestHandler0#attrs.handle}",
          "statements": [],
        },
        "type": "@winglang/sdk.sim.Policy",
      },
      {
        "addr": "c82d41b2501ac42e07e4565202a5b87a180a01c6a2",
        "attrs": {},
        "path": "root/my_api/OnRequestHandler0",
        "props": {
          "concurrency": 100,
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler0_c82d41b2.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "@winglang/sdk.cloud.Function",
      },
      {
        "addr": "c8f2ecf2132465e146aa80cb01f4e5ab1968f4314a",
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/bat": {
                "get": {
                  "operationId": "get-hello/bat",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/foo": {
                "get": {
                  "operationId": "get-hello/foo",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "@winglang/sdk.cloud.Api",
      },
      {
        "addr": "c8a199e7bc539eb442a47653fe0f2b1f0bf50aa6d1",
        "attrs": {},
        "deps": [
          "root/my_api/OnRequestHandler0",
          "root/my_api",
        ],
        "path": "root/my_api/ApiEventMapping0",
        "props": {
          "publisher": "\${wsim#root/my_api#attrs.handle}",
          "subscriber": "\${wsim#root/my_api/OnRequestHandler0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "pathPattern": "/hello/foo",
              },
              {
                "method": "GET",
                "pathPattern": "/hello/bat",
              },
            ],
          },
        },
        "type": "@winglang/sdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_api": {
          "children": {
            "ApiEventMapping0": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping0",
              "path": "root/my_api/ApiEventMapping0",
            },
            "Endpoint": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "Api root/my_api",
                "title": "Endpoint",
              },
              "id": "Endpoint",
              "path": "root/my_api/Endpoint",
            },
            "OnRequestHandler0": {
              "children": {
                "Policy": {
                  "constructInfo": {
                    "fqn": "constructs.Construct",
                    "version": "10.3.0",
                  },
                  "display": {
                    "description": "A simulated resource policy",
                    "hidden": true,
                    "title": "Policy",
                  },
                  "id": "Policy",
                  "path": "root/my_api/OnRequestHandler0/Policy",
                },
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "hidden": true,
                "sourceModule": "@winglang/sdk",
                "title": "GET /hello/foo",
              },
              "id": "OnRequestHandler0",
              "path": "root/my_api/OnRequestHandler0",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`create an api 1`] = `
{
  "connections.json": {
    "connections": [],
    "version": "connections-0.1",
  },
  "simulator.json": {
    "resources": [
      {
        "addr": "c8f2ecf2132465e146aa80cb01f4e5ab1968f4314a",
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {},
          },
        },
        "type": "@winglang/sdk.cloud.Api",
      },
      {
        "addr": "c85bd2f9eb401f27bec4d0ad16222c2876bcfe640a",
        "attrs": {},
        "path": "root/my_api/Endpoint",
        "props": {
          "inputUrl": "\${wsim#root/my_api#attrs.url}",
          "label": "Api root/my_api",
          "url": "\${wsim#root/my_api#attrs.url}",
        },
        "type": "@winglang/sdk.cloud.Endpoint",
      },
    ],
    "sdkVersion": "0.0.0",
    "types": {
      "@winglang/sdk.cloud.Api": {
        "className": "Api",
        "sourcePath": "<ABSOLUTE PATH>/api.inflight.js",
      },
      "@winglang/sdk.cloud.Bucket": {
        "className": "Bucket",
        "sourcePath": "<ABSOLUTE PATH>/bucket.inflight.js",
      },
      "@winglang/sdk.cloud.Counter": {
        "className": "Counter",
        "sourcePath": "<ABSOLUTE PATH>/counter.inflight.js",
      },
      "@winglang/sdk.cloud.Domain": {
        "className": "Domain",
        "sourcePath": "<ABSOLUTE PATH>/domain.inflight.js",
      },
      "@winglang/sdk.cloud.Endpoint": {
        "className": "Endpoint",
        "sourcePath": "<ABSOLUTE PATH>/endpoint.inflight.js",
      },
      "@winglang/sdk.cloud.Function": {
        "className": "Function",
        "sourcePath": "<ABSOLUTE PATH>/function.inflight.js",
      },
      "@winglang/sdk.cloud.OnDeploy": {
        "className": "OnDeploy",
        "sourcePath": "<ABSOLUTE PATH>/on-deploy.inflight.js",
      },
      "@winglang/sdk.cloud.Queue": {
        "className": "Queue",
        "sourcePath": "<ABSOLUTE PATH>/queue.inflight.js",
      },
      "@winglang/sdk.cloud.Schedule": {
        "className": "Schedule",
        "sourcePath": "<ABSOLUTE PATH>/schedule.inflight.js",
      },
      "@winglang/sdk.cloud.Secret": {
        "className": "Secret",
        "sourcePath": "<ABSOLUTE PATH>/secret.inflight.js",
      },
      "@winglang/sdk.cloud.Service": {
        "className": "Service",
        "sourcePath": "<ABSOLUTE PATH>/service.inflight.js",
      },
      "@winglang/sdk.cloud.Topic": {
        "className": "Topic",
        "sourcePath": "<ABSOLUTE PATH>/topic.inflight.js",
      },
      "@winglang/sdk.cloud.Website": {
        "className": "Website",
        "sourcePath": "<ABSOLUTE PATH>/website.inflight.js",
      },
      "@winglang/sdk.ex.ReactApp": {
        "className": "ReactApp",
        "sourcePath": "<ABSOLUTE PATH>/react-app.inflight.js",
      },
      "@winglang/sdk.ex.Redis": {
        "className": "Redis",
        "sourcePath": "<ABSOLUTE PATH>/redis.inflight.js",
      },
      "@winglang/sdk.ex.Table": {
        "className": "Table",
        "sourcePath": "<ABSOLUTE PATH>/table.inflight.js",
      },
      "@winglang/sdk.sim.Container": {
        "className": "Container",
        "sourcePath": "<ABSOLUTE PATH>/container.inflight.js",
      },
      "@winglang/sdk.sim.EventMapping": {
        "className": "EventMapping",
        "sourcePath": "<ABSOLUTE PATH>/event-mapping.inflight.js",
      },
      "@winglang/sdk.sim.Policy": {
        "className": "Policy",
        "sourcePath": "<ABSOLUTE PATH>/policy.inflight.js",
      },
      "@winglang/sdk.sim.State": {
        "className": "State",
        "sourcePath": "<ABSOLUTE PATH>/state.inflight.js",
      },
      "@winglang/sdk.std.TestRunner": {
        "className": "TestRunner",
        "sourcePath": "<ABSOLUTE PATH>/test-runner.inflight.js",
      },
    },
  },
  "tree.json": {
    "tree": {
      "children": {
        "my_api": {
          "children": {
            "Endpoint": {
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.3.0",
              },
              "display": {
                "description": "Api root/my_api",
                "title": "Endpoint",
              },
              "id": "Endpoint",
              "path": "root/my_api/Endpoint",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.3.0",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.3.0",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
